[project]
name = "sgdslicedwasserstein"
version = "0.1.0"
description = ""
authors = [
    {name = "killian31",email = "80256683+killian31@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (==1.26.4)",
    "torch (==2.2.2)",
    "torchvision (==0.17.2)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
